--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
     <div id="sub-message">
       I will alarm you if you close your eyes for more than half sec.
     </div>
+    
+    <iframe
+    id="makroIframe"
+    src="https://makro-run-threejs.web.app/game_build/index.html"
+    frameborder="0"
+    width="800"
+    height="600"
+    ></iframe>
+
     <footer>
       <div>
         <a href="https://ko-fi.com/dinodroid">
